[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"
authors = ["Student Name <student@example.com>"]
description = "Conway's Game of Life implemented in Rust and compiled to WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/wasm-game-of-life"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.js-sys]
version = "0.3.64"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Window",
  "MouseEvent",
  "Performance",
]

[features]
default = ["console_error_panic_hook"]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "s"